# knn-k-nearest-neighbors-algorithm

./: README.md
ass1-main/: CMakeLists.txt  Classifier.h  CsvReader.cpp  CsvReader.h  Flower.cpp  Flower.h  README.md  main.cpp  main.h
ass2-main/: README.md  Socket.h
ass2-main/client/: Client.cpp  Client.h  CsvReader.cpp  CsvReader.h  main.cpp
ass2-main/server/: Classifiable.h  Classifier.h  CsvReader.cpp  CsvReader.h  Flower.cpp  Flower.h  Server.cpp  Server.h  main.cpp
ass3-main/: CMakeLists.txt  README.md
ass3-main/client/: CMakeLists.txt  Client.cpp  Client.h  CsvReader.cpp  CsvReader.h  main.cpp
ass3-main/server/: CLI.h  CMakeLists.txt  Classifiable.h  Classifier.h  CsvReader.cpp  CsvReader.h  Data.h  Flower.cpp  Flower.h  Server.cpp  Server.h  main.cpp
ass3-main/server/IOs/: DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
ass3-main/server/commands/: ChangeAlgorithmPropertiesCommand.h  ClassifyCommand.h  Command.h  CommandLineResultsCommand.h  ConfusionMatrixCommand.h  FileResultsCommand.h  UploadCommand.h
ass3-main/server/distances/: CheDistance.h  Distance.h  EucDistance.h  ManDistance.h
